Everything is now in its place although there's still some tweeking to be done and it must be made responsive

--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
             <div class="image-gallery">
                 <ul>
                     <li>
-                        <img>
+                        <img src="placeholder-image.svg">
                         <p class="image-caption">
                             Image caption: Wow, look at this image it's just so cool; mad skills are present.
                         </p>
                     </li>
 
                     <li>
-                        <img>
+                        <img src="placeholder-image.svg">
                         <p class="image-caption">
-                            Image caption: This image however, now this is an image. People look at this image.
+                                Image caption: Wow, look at this image it's just so cool; mad skills are present.
                         </p>
                     </li>
                     <li>
-                        <img>
+                        <img src="placeholder-image.svg">
                         <p>
-                            Image caption: Yeah this is an image, nothing special here. Just a plain old image, nice.
+                                Image caption: Wow, look at this image it's just so cool; mad skills are present.
                         </p>
                     </li>
                 </ul>
@@ -96,7 +96,7 @@
                     <input id="number" type="number">
 
                     <label>message</label>
-                    <input id="message" type="text">
+                    <textarea id="message" type="text"></textarea>
                 </form>
             </div>
 
