TEST: Responsive approach

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
                 <svg viewBox="0 0 830 230" preserveAspectRatio = "xMinYMin meet" fill="#0000000">
                     <style>
 
-                        @media screen and (max-width: 540px) {
+                        @media screen and (max-width: 145.7mm) {
                             .larger_header {
                                 display: none;
                             }
                         }
 
-                        @media screen and (min-width: 540px) {
+                        @media screen and (min-width: 145.7mm) {
                             .smaller_header {
                                 display: none;
                             }
