Header is mostly responsive

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
                 <svg viewBox="0 0 830 230" preserveAspectRatio = "xMinYMin meet" fill="#0000000">
                     <style>
 
-                        @media screen and (max-width: 145.7mm) {
+                        @media screen and (max-width: 540px) {
                             .larger_header {
                                 display: none;
                             }
                         }
 
-                        @media screen and (min-width: 145.7mm) {
+                        @media screen and (min-width: 540px) {
                             .smaller_header {
                                 display: none;
                             }
@@ -40,8 +40,9 @@
                         <rect x="30" y="0" width="95%" height="440%" fill="#0585D5"/>
                         <rect x="10" y="20" width="95%" height="440%" fill="#FFFFFF" stroke="#0585D5" stroke-width="10"/>
         
-                        <text x="5%" y="70%" font-family="Avenir" font-size="7.5em" fill="#03C5CC">
-                            Joseph Crane
+                        <text font-family="Avenir" font-size="14em" fill="#03C5CC">
+                            <tspan x="5%" y="120%">Joseph</tspan>
+                            <tspan x="4%" y="220%">Crane</tspan>
                         </text>
                     </g>
                 </svg>
