--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Joseph Crane's portfolio</title>
     </head>
     <body>
-        <div style="min-width: 960px; margin: 0 auto;">
+        <div style="min-width: 960px; margin: 0 auto;"> <!-- https://stackoverflow.com/questions/4641436/stop-the-browser-from-pushing-everything-around-when-i-resize -->
             <header>
                 <div class="header-bar-container">
                     <svg viewBox="0 0 830 230" preserveAspectRatio = "xMinYMin meet" fill="#0000000">
