--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </header>
         <main>
-            <!-- <div class="copy-container">
+            <div class="copy-container">
                 <div>
                     <svg viewBox="0 0 830 700" preserveAspectRatio = "xMinYMin meet" fill="#0000000">
                             <rect x="30" y="0" width="600" height="560" fill="#0585D5"/>
@@ -87,7 +87,7 @@
                             </text>
                     </svg>
                 </div>
-            </div> -->
+            </div>
 
             <div class="image-gallery">
                 <ul>
