--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
             <div class="header-bar-container">
                 <!-- large header  -->
                 <svg id="largeHeader" viewBox="0 0 2500 600" preserveAspectRatio="xMinYMin meet" fill="#0000000">
-                    <g class="larger_header">
-                        <rect x="2%" y="0" width="100%" height="100%" fill="#0585D5" />
-                        <rect x="0" y="10%" width="99%" height="90%" fill="#FFFFFF" stroke="#0585D5" stroke-width="20" />
+                    <g>
+                        <rect x="35" y="35" width="100%" height="100%" fill="#0585D5" />
+                        <rect x="0" y="5" width="98%" height="90%" fill="#FFFFFF" stroke="#0585D5" stroke-width="20" />
 
-                        <text font-family="Avenir" font-size="24em" fill="#03C5CC">
-                            <tspan x="3%" y="69.8%">Joseph Crane</tspan>
+                        <text font-family="inherit;" font-size="24em" fill="#03C5CC">
+                            <tspan x="43" y="68%">Joseph Crane</tspan>
                         </text>
                     </g>
                 </svg>
 
                 <!-- small header  -->
                 <svg id="smallHeader" viewBox="0 0 800 800" preserveAspectRatio="xMinYMin meet" fill="#0000000">
-                    <g class="smaller_header">
+                    <g>
                         <rect width="95%" height="120%" x="60" y="0" fill="#0585D5" />
                         <rect width="95%" height="120%" x="10" y="40" fill="#FFFFFF" stroke="#0585D5" stroke-width="10" />
-                        <text fill="#03C5CC" font-family="Avenir" font-size="14em">
+                        <text fill="#03C5CC" font-family="inherit;" font-size="14em">
                             <tspan x="4%" y="35%">Joseph</tspan>
                             <tspan x="3%" y="70%">Crane</tspan>
                         </text>
@@ -45,13 +45,24 @@
             <div class="copy-container">
                 <div>
                     <svg id="aboutMeSVG" class="copySVG" viewBox="0 0 800 1000" preserveAspectRatio="xMinYMin meet" fill="#0000000">
-                        <!-- <rect x="30" y="0" width="95%" height="95%" fill="#0585D5" /> -->
-                        <rect x="10" y="20" width="95%" height="95%" fill="#FFFFFF" stroke="#0585D5" stroke-width="10" />
+                        <rect x="-10" y="35" width="95%" height="95%" fill="#0585D5" />
+                        <rect x="35" y="3" width="95%" height="95%" fill="#FFFFFF" stroke="#0585D5" stroke-width="10" />
+
+                        <text x="7%" y="5%" fill="#03C5CC" font-family="inherit;" font-size="2em">
+                            <tspan y="5%">Here lay things and stuff, stuff and things etc.</tspan> 
+                            <tspan x="7%" y="9%">Also more things and stuff</tspan>
+                            <tspan x="7%" y="13%">Also more things and stuff</tspan>
+                            <tspan x="7%" y="17%">Also more things and stuff</tspan>
+                            <tspan x="7%" y="21%">Also more things and stuff</tspan>
+                            <tspan x="7%" y="25%">Also more things and stuff</tspan>
+                            <tspan x="7%" y="29%">Also more things and stuff</tspan>
+                            <tspan x="7%" y="33%">Also more things and stuff</tspan>
+                            <tspan x="7%" y="37%">Also more things and stuff</tspan>
+                        </text>
                     </svg>
 
                     <h2 id="aboutMeH2" class="sectionHeader">
-                        <em>about
-                            <br>me</em>
+                        <em>about <br>me</em>
                     </h2>
                 </div>
 
@@ -61,8 +72,20 @@
                     </h2>
 
                     <svg class="copySVG" viewBox="0 0 800 1000" preserveAspectRatio="xMinYMin meet" fill="#0000000">
-                        <!-- <rect x="30" y="0" width="95%" height="95%" fill="#0585D5" /> -->
-                        <rect x="10" y="20" width="95%" height="95%" fill="#FFFFFF" stroke="#0585D5" stroke-width="10" />
+                        <rect x="35" y="35" width="95%" height="95%" fill="#0585D5" />
+                        <rect x="3" y="3" width="95%" height="95%" fill="#FFFFFF" stroke="#0585D5" stroke-width="10" />
+
+                        <text x="3%" y="5%" fill="#03C5CC" font-family="inherit;" font-size="2em">
+                                <tspan y="5%">Here lay things and stuff, stuff and things etc.</tspan> 
+                                <tspan x="3%" y="9%">Also more things and stuff</tspan>
+                                <tspan x="3%" y="13%">Also more things and stuff</tspan>
+                                <tspan x="3%" y="17%">Also more things and stuff</tspan>
+                                <tspan x="3%" y="21%">Also more things and stuff</tspan>
+                                <tspan x="3%" y="25%">Also more things and stuff</tspan>
+                                <tspan x="3%" y="29%">Also more things and stuff</tspan>
+                                <tspan x="3%" y="33%">Also more things and stuff</tspan>
+                                <tspan x="3%" y="37%">Also more things and stuff</tspan>
+                            </text>
                     </svg>
                 </div>
             </div>
