Added red line svgs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <body>
         <header>
+            <img id="redDots" src="dots.svg" alt="a collection of randomly assorted red dots">
+
             <div class="header-bar-container">
                 <!-- large header  -->
                 <svg id="largeHeader" viewBox="0 0 2500 600" preserveAspectRatio="xMinYMin meet" fill="#0000000">
@@ -37,7 +39,7 @@
                 </svg>
 
                 <h3>
-                    <em>Code &amp; stuff maybe</em>
+                    <em>Code &amp; stuff, maybe</em>
                 </h3>
             </div>
         </header>
@@ -45,7 +47,7 @@
             <div class="copy-container">
                 <div>
                     <svg id="aboutMeSVG" class="copySVG" viewBox="0 0 800 1000" preserveAspectRatio="xMinYMin meet" fill="#0000000">
-                        <rect x="-10" y="35" width="95%" height="95%" fill="#0585D5" />
+                        <rect x="3" y="35" width="95%" height="95%" fill="#0585D5" />
                         <rect x="35" y="3" width="95%" height="95%" fill="#FFFFFF" stroke="#0585D5" stroke-width="10" />
 
                         <text x="7%" y="5%" fill="#03C5CC" font-family="inherit;" font-size="2em">
