--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE HTML>
 <html>
+    <!-- TODO:
+        1. The form boxes are too large, they take up way to much room. Make these smaller.
+    -->
+
     <head>
         <meta lang="en" charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +22,7 @@
                 <svg id="largeHeader" viewBox="0 0 2500 600" preserveAspectRatio="xMinYMin meet" fill="#0000000">
                     <g>
                         <rect x="35" y="35" width="100%" height="100%" fill="#0585D5" />
-                        <rect x="0" y="5" width="98%" height="90%" fill="#FFFFFF" stroke="#0585D5" stroke-width="20" />
+                        <rect x="12" y="5" width="98%" height="90%" fill="#FFFFFF" stroke="#0585D5" stroke-width="20" />
 
                         <text font-family="inherit;" font-size="24em" fill="#03C5CC">
                             <tspan x="43" y="68%">Joseph Crane</tspan>
@@ -45,6 +49,16 @@
         </header>
         <main>
             <div class="copy-container">
+
+                <!-- About me copy: -->
+                <!-- 
+                    
+
+
+
+
+                 -->
+
                 <div>
                     <svg id="aboutMeSVG" class="copySVG" viewBox="0 0 800 1000" preserveAspectRatio="xMinYMin meet" fill="#0000000">
                         <rect x="3" y="35" width="95%" height="95%" fill="#0585D5" />
