--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <meta lang="en" charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <!-- Possible alternative to Avenir -->
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
+
         <link rel="stylesheet" type="text/css" href="style.css" />
 
         <title>Joseph Crane's portfolio</title>
