--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
         <meta lang="en" charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- Possible alternative to Avenir -->
-        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
+        <!-- Possible alternatives to Gotham -->
+        <!-- <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> -->
+        <!-- <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"> -->
+        <!-- <link href="https://fonts.googleapis.com/css?family=Raleway:400" rel="stylesheet">  -->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet"> 
 
         <link rel="stylesheet" type="text/css" href="style.css" />
 
