--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
     <head>
         <meta lang="en" charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Joseph Crane">
+
+        <meta name="description" content="Joseph Crane's protfolio, a website about him.">
+        <meta name="keywords" content="Games, Design, about me, Joseph Crane, portfolio, Shelf, Indie game,
+        Indie games, programmer, Unity, swift 4, iOS development">
 
         <!-- JS stuff -->
         <script src="js/fixFonts.js"></script>
-        <script src="js/placeSVGText.js"></script>
         <script src="js/side-menu.js"></script>
         <!-- CSS stuff -->
         <link rel="stylesheet" type="text/css" href="style.css" />
@@ -25,16 +29,16 @@
             <ul>
                 <li><a href="#top" onclick="closeMenu()">The top</a></li>
                 <li><a href="#copy" onclick="closeMenu()">About me</a></li>
-                <li><a href="#PW" onclick="closeMenu()">About me</a></li>
+                <li><a href="#PW" onclick="closeMenu()">Past work</a></li>
                 <li><a href="#imageGallery" onclick="closeMenu()">Image gallery</a></li>
                 <li><a href="#sayHello" onclick="closeMenu()">Say hello</a></li>
             </ul>
 
             <a href="https://twitter.com/hurriecrane">
-                <img id="Twitter_Social_Icon_Circle_Color" src="images/Twitter_Social_Icon_Circle_Color.svg">
+                <img id="Twitter_Social_Icon_Circle_Color" alt="Joseph Cranes Twitter @HurrieCrane" src="images/Twitter_Social_Icon_Circle_Color.svg">
             </a>
             <a href="https://github.com/HurrieCrane">
-                <img id="githubIcon" src="images/icons8-github-50.png">
+                <img id="githubIcon" alt="Joseph Cranes github /HurrieCrane" src="images/icons8-github-50.png">
             </a>
         </div>
         
@@ -74,7 +78,7 @@
             <main>
                 <div id="copy" class="copy-container">
                     <div>
-                        <svg class="copySVG" onload="placeText(0)" viewBox="0 0 800 1000" preserveAspectRatio="xMinYMin meet" fill="#0000000">
+                        <svg class="copySVG" viewBox="0 0 800 1000" preserveAspectRatio="xMinYMin meet" fill="#0000000">
                             <rect x="3" y="35" width="95%" height="95%" fill="#0585D5" />
                             <rect x="35" y="3" width="95%" height="95%" fill="#FFFFFF" stroke="#0585D5" stroke-width="10" />
 
@@ -176,17 +180,17 @@
                             </p>
                         </div>
                         <div>
-                            <img class="galleryImage" src="images/placeholder-image.svg" alt="a placeholder image">
+                            <img class="galleryImage" src="images/cup_500x500.svg" alt="a placeholder image">
                             <p class="image-caption">
-                                Image caption: Shelf is a brand created in 2015, it has so far released one game called 
-                                <a href="https://play.google.com/store/apps/details?id=com.Shelf.Cables">Cables.</a>
-                            </p>
+                                I belive that visual design is an important aspect of communication and I try to be
+                                <a href="https://www.artstation.com/hurriecrane">cognizant</a> of it.
+                            </p> <!-- https://www.artstation.com/hurriecrane -->
                         </div>
                         <div>
-                            <img class="galleryImage" src="images/placeholder-image.svg" alt="a placeholder image">
+                            <img class="galleryImage" src="images/code.svg" alt="a placeholder image">
                             <p class="image-caption">
-                                Image caption: Shelf is a brand created in 2015, it has so far released one game called 
-                                <a href="https://play.google.com/store/apps/details?id=com.Shelf.Cables">Cables.</a>
+                                Coding is very important to me. 
+                                <a href="http://code-poetry.com">Code as Poetry</a>
                             </p>
                         </div>
                     </div>
