--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <tspan x="3%" y="9.2%">company called Vandie Studios: at first we </tspan>
                                 <tspan x="3%" y="13.4%">worked on a game called Hope, which was up </tspan>
                                 <tspan x="3%" y="17.6%">for the YGD Bafta, and then a game called </tspan>
-                                <tspan x="3%" y="21.8%">Chief. We then went to produce educational </tspan>
+                                <tspan x="3%" y="21.8%">Chief. We then produced educational </tspan>
                                 <tspan x="3%" y="26.0%">software, we worked on a system called </tspan>
                                 <tspan x="3%" y="30.2%">Thanks which was a reward system for schools. </tspan>
                                 <tspan x="3%" y="34.4%">On 1st August 2017 I left Vandie Studios to</tspan>
