Fixed description message

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Joseph Crane">
 
-        <meta name="description" content="Joseph Crane's protfolio, a website about him.">
+        <meta name="description" content="Joseph Crane's portfolio, a website about him.">
         <meta name="keywords" content="Games, Design, about me, Joseph Crane, portfolio, Shelf, Indie game,
         Indie games, programmer, Unity, swift 4, iOS development">
 
